--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "types": "index.d.ts",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "postinstall": "./node_modules/.bin/opencollective postinstall",
+    "postinstall": "opencollective-postinstall",
     "build": "./node_modules/.bin/babel src -d dist",
     "lint": "prettier-eslint src/**/*.js __tests__/**/*.js --list-different",
     "fix": "prettier-eslint src/**/*.js __tests__/**/*.js --write",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "lodash.isequal": "4.5.0",
-    "opencollective": "^1.0.3",
+    "opencollective-postinstall": "^2.0.3",
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.6.2",
     "react-navigation": "2.x"
